# NoisyCircuits

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NoisyCircuits.html  NoisyCircuits.utils.html  README.md  contributing.html  environment.yml  genindex.html  index.html  intro.html  license.html  mkdocs.yml  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.toml  references.html  requirements.txt  search.html  searchindex.js  setup.py  theory.html  tutorials.html
_modules/: index.html
_sources/: NoisyCircuits.utils.rst.txt  index.rst.txt  intro.rst.txt  license.rst.txt  modules.rst.txt  references.rst.txt  theory.rst.txt
benchmarking/: initialization_script.py  method_execution_script.py  run_fidelity_benchmark.py  run_memory_benchmark.py  run_time_benchmark.py
docs/: index.md  license.md
examples/: Analyze.txt  Memory Output.txt  Noise_Model_from_API.csv  Noise_Model_from_Hardware.pkl  QNN_Results.pkl  README.md  aux.py  backend_data.json  calibration_data.csv  compare_old_new.ipynb  compare_old_new.py  data_analysis.ipynb  data_csv.ipynb  dict_input_test.cpp  ibm_api.ipynb  introduction.html  introduction.ipynb  memory_read.py  noise.pkl  noise_build_timer.ipynb  output.txt  profiling.py  quantum_neural_networks.html  quantum_neural_networks.ipynb  run_full_analysis.py  run_multiple_on_hardware.ipynb  run_on_hardware.html  run_on_hardware.ipynb  run_test  run_test.py  runtime_analysis.py  simulator.cpp  simulator_gpu.cpp  sparse_ops.ipynb  test.ipynb  test.py  test.qasm  test_mcwf.ipynb  test_new.ipynb  test_notebook.ipynb  (+3 more)
noise_models/: Modified_Sample_data.csv  (+3 more)
(+128 files in other folders)
